c4prj1_deck/grade.txt
Grading at Sun Mar  7 20:13:33 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:39:3: error: ‘ex’ undeclared (first use in this function)
   ex->cards = NULL;
   ^
deck.c:39:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation of deck.c failed

Overall Grade: F
